--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta name="description" content="Dmego Home">
     <meta name="keywords" content="Dmego,Homepage">
     <meta name="author" content="Dmego">
-    <title>Dmego Home</title>
+    <title>lzh-zone</title>
     <link rel="stylesheet" type="text/css" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/css/onlinewebfonts.css"/>
     <link rel="stylesheet" type="text/css" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/css/vno.css">
     <link rel="stylesheet" type="text/css" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/css/iconfont.css">
-    <link rel="apple-touch-icon" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/lzh-zone/picture/img/diugai.com164896560261616.png">
     <link rel="icon" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/favicon.ico">
 </head>
 
@@ -38,7 +38,7 @@
                                     </h2>
                                     <p>
                                         
-                                            2022 · 自律
+                                            2022 · 冲刺
                                         
                                     </p>
                                 </div>
@@ -46,13 +46,13 @@
                         </a>
                     </div>
                     <h1 class="panel-cover__title panel-title iUp">
-                        <a href="#" title="Dmego Home">Dmego</a>
+                        <a href="#" title="Dmego Home">sterling</a>
                     </h1>
                     <p class="panel-cover__subtitle panel-subtitle iUp">Code Create Life</p>
                     <hr class="panel-cover__divider iUp" />
-                    <p id="description" class="panel-cover__description iUp">如何得与凉风约, 不共尘沙一并来!
+                    <p id="description" class="panel-cover__description iUp">没有横空出世的运气，只有不为人知的努力
                         <br/>
-                        <strong>-「中牟道中」</strong>
+                        <strong>-「forward」</strong>
                     </p>
                     <div class="navigation-wrapper iUp">
                         <div>
@@ -62,13 +62,13 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://dmego.cn" class="blog-button" target="_blank">博客</a>
+                                        <a href="https://lzh-zone.github.io" class="blog-button" target="_blank">博客</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://r.dmego.cn" class="blog-button" target="_blank">简历</a>
+                                        <a href="https://zihao.ml" class="blog-button" target="_blank">作品</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://dmego.cn/about/" class="blog-button" target="_blank">关于</a>
+                                        <a href="https://lzhedge.cf" class="blog-button" target="_blank">其它</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -77,26 +77,26 @@
                             <nav class="cover-navigation navigation--social">
                                 <ul class="navigation">
                                     <li class="navigation__item">
-                                        <a href="https://github.com/dmego/" title="github" target="_blank">
+                                        <a href="https://github.com/lzh-zone/" title="github" target="_blank">
                                             <i class='social iconfont icon-github'></i>
                                             <span class="label">github</span>
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="http://www.cnblogs.com/dmego/" title="cnblogs" target="_blank">
+                                        <a href="https://music.163.com/#/user/home?id=1333865278" title="cnblogs" target="_blank">
                                             <i class='social iconfont icon-cnblogs'></i>
-                                            <span class="label">cnblogs</span>
+                                            <span class="label">music</span>
                                         </a>
                                     </li>
 
                                     <li class="navigation__item">
-                                        <a href="https://www.zhihu.com/people/dmego/" title="zhihu" target="_blank">
+                                        <a href="https://www.zhihu.com/people/lzhdu-jia-ji-yi" title="zhihu" target="_blank">
                                             <i class='social iconfont icon-zhihu'></i>
                                             <span class="label">zhihu</span>
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="mailto:dmeago@gmail.com" title="email">
+                                        <a href="mailto:2441555908@qq.com" title="email">
                                             <i class='social iconfont icon-email'></i>
                                             <span class="label">email</span>
                                         </a>
@@ -123,6 +123,8 @@
     <script type="text/javascript" src="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/js/main.js"></script>
     <script type="text/javascript" src="./assets/json/images.json?cb=getBingImages"></script>
+    <script id="lfz" src="https://player.liaofuzhan.com/player/player.js" key=1521319244015398913></script>
+    <script defer src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"70870588cf657ea2","version":"2021.12.0","r":1,"token":"9cf6aad412c6488cba124e7b59c922db","si":100}' crossorigin="anonymous"></script>
 </body>
 </html>
 
