--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/css/vno.css">
     <link rel="stylesheet" type="text/css" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/css/iconfont.css">
     <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/lzh-zone/picture/img/diugai.com164896560261616.png">
-    <link rel="icon" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/favicon.ico">
+    <link rel="icon" href="https://cdn.jsdelivr.net/gh/lzh-zone/picture/img/diugai.com164896560261616.png">
 </head>
 
 <body>
@@ -83,7 +83,7 @@
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://music.163.com/#/user/home?id=1333865278" title="cnblogs" target="_blank">
+                                        <a href="https://music.163.com/#/user/home?id=1333865278" title="music" target="_blank">
                                             <i class='social iconfont icon-cnblogs'></i>
                                             <span class="label">music</span>
                                         </a>
