--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="panel-main__content">
                     <div class="ih-item circle effect right_to_left">            
                         <a href="#" title="" class="blog-button">
-                            <div class="img"><img src="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/img/logo3.jpg" alt="img" class="js-avatar iUp profilepic"></div>
+                            <div class="img"><img src="https://cdn.jsdelivr.net/gh/lzh-zone/picture/img/屏幕截图 2022-06-09 101808.png" alt="img" class="js-avatar iUp profilepic"></div>
                             <div class="info iUp">
                                 <div class="info-back">
                                     <h2> 
