--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" type="text/css" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/css/onlinewebfonts.css"/>
     <link rel="stylesheet" type="text/css" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/css/vno.css">
     <link rel="stylesheet" type="text/css" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/css/iconfont.css">
-    <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/lzh-zone/picture/img/diugai.com164896560261616.png">
-    <link rel="icon" href="https://cdn.jsdelivr.net/gh/lzh-zone/picture/img/diugai.com164896560261616.png">
+    <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/lzh-zone/picture/img/屏幕截图 2022-06-09 101808.png">
+    <link rel="icon" href="https://cdn.jsdelivr.net/gh/lzh-zone/picture/img/屏幕截图 2022-06-09 101808.png">
 </head>
 
 <body>
