--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <nav class="cover-navigation cover-navigation--primary">
                                 <ul class="navigation">
                                     <li class="navigation__item">
-                                        <a href="/" class="blog-button">首页</a>
+                                        <a href="/home" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="https://lzh-zone.github.io" class="blog-button" target="_blank">博客</a>
