--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
     <script type="text/javascript" src="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/js/main.js"></script>
     <script type="text/javascript" src="./assets/json/images.json?cb=getBingImages"></script>
-    <script id="lfz" src="https://player.liaofuzhan.com/player/player.js" key=1521319244015398913></script>
-    <script defer src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"70870588cf657ea2","version":"2021.12.0","r":1,"token":"9cf6aad412c6488cba124e7b59c922db","si":100}' crossorigin="anonymous"></script>
+    <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="//music.163.com/outchain/player?type=0&id=7479314362&auto=1&height=430"></iframe>
 </body>
 </html>
 
