--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/css/iconfont.css">
     <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/lzh-zone/picture/img/屏幕截图 2022-06-09 101808.png">
     <link rel="icon" href="https://cdn.jsdelivr.net/gh/lzh-zone/picture/img/屏幕截图 2022-06-09 101808.png">
+    <script src="//lib.baomitu.com/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -123,7 +124,7 @@
     <script type="text/javascript" src="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/js/main.js"></script>
     <script type="text/javascript" src="./assets/json/images.json?cb=getBingImages"></script>
-    <script id="lfz" src="https://player.liaofuzhan.com/player/player.js" key=1521319244015398913></script>
+    <!--<script id="lfz" src="https://player.liaofuzhan.com/player/player.js" key=1521319244015398913></script>-->
     <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="https://music.163.com/outchain/player?type=0&id=7479314362&auto=1&height=430"></iframe>
     <div id="music" key="62a19898720e6" api="http://music.aivei.top"></div><script id="xplayer" src="http://music.aivei.top/api/PlayerJs/id/62a19898720e6" ></script>
 </body>
