--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/css/iconfont.css">
     <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/lzh-zone/picture/img/屏幕截图 2022-06-09 101808.png">
     <link rel="icon" href="https://cdn.jsdelivr.net/gh/lzh-zone/picture/img/屏幕截图 2022-06-09 101808.png">
+    <link rel="stylesheet" type="text/css" href="//lib.baomitu.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="//lib.baomitu.com/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
