--- a/index.html
+++ b/index.html
@@ -126,8 +126,7 @@
     <script type="text/javascript" src="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/js/main.js"></script>
     <script type="text/javascript" src="./assets/json/images.json?cb=getBingImages"></script>
     <!--<script id="lfz" src="https://player.liaofuzhan.com/player/player.js" key=1521319244015398913></script>-->
-    <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="https://music.163.com/outchain/player?type=0&id=7479314362&auto=1&height=430"></iframe>
-    <div id="music" key="62a19898720e6" api="http://music.aivei.top"></div><script id="xplayer" src="http://music.aivei.top/api/PlayerJs/id/62a19898720e6" ></script>
+   <script src="https://myhkw.cn/api/player/1654766169141" id="myhk" key="1654766169141" m="1"></script>
 </body>
 </html>
 
