--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <script type="text/javascript" src="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/js/main.js"></script>
     <script type="text/javascript" src="./assets/json/images.json?cb=getBingImages"></script>
     <!--<script id="lfz" src="https://player.liaofuzhan.com/player/player.js" key=1521319244015398913></script>-->
-   <script src="https://myhkw.cn/api/player/1654766169141" id="myhk" key="1654766169141" m="1"></script>
+   <script id="music" src="https://music.xingyaox.com/player.js" key="6399cbe9e75044ebab7969d7819744fc"></script>
 </body>
 </html>
 
