--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                                         <a href="https://lzh-zone.github.io" class="blog-button" target="_blank">博客</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://zihao.ml" class="blog-button" target="_blank">作品</a>
+                                        <a href="https://zihao.ml" class="blog-button" target="_blank">解析</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://lzhedge.cf" class="blog-button" target="_blank">其它</a>
+                                        <a href="https://sterling.cf" class="blog-button" target="_blank">影视</a>
                                     </li>
                                 </ul>
                             </nav>
