--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
    <script id="music" src="https://music.xingyaox.com/player.js" key="6399cbe9e75044ebab7969d7819744fc"></script>
     <!-- aplayer -->
     <script src="https://cdn.jsdelivr.net/npm/meting@1.2.0/dist/Meting.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/kaygb/kaygb@master/js/v3.js"></script>
+    <!--<script src="https://cdn.jsdelivr.net/gh/kaygb/kaygb@master/js/v3.js"></script> -->
     <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/kaygb/kaygb@master/layer/layer.js"></script>
     <script>var meting_api='https://zihao.ml/meting/?server=:server&type=:type&id=:id'</script>
