--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <script type="text/javascript" src="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/js/main.js"></script>
     <script type="text/javascript" src="./assets/json/images.json?cb=getBingImages"></script>
     <!--<script id="lfz" src="https://player.liaofuzhan.com/player/player.js" key=1521319244015398913></script>-->
-   <script id="music" src="https://music.xingyaox.com/player.js" key="6399cbe9e75044ebab7969d7819744fc"></script>
+    <!--<script id="music" src="https://music.xingyaox.com/player.js" key="6399cbe9e75044ebab7969d7819744fc"></script>-->
     <!-- aplayer -->
     <script src="https://cdn.jsdelivr.net/npm/meting@1.2.0/dist/Meting.min.js"></script>
     <!--<script src="https://cdn.jsdelivr.net/gh/kaygb/kaygb@master/js/v3.js"></script> -->
