--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div id="aplayer" class="aplayer" data-order="random" data-id="2047115431" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="true" data-volume="0.6"></div>
+    <!--<div id="aplayer" class="aplayer" data-order="random" data-id="2047115431" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="true" data-volume="0.6"></div>-->
     <span class="mobile btn-mobile-menu">
         <i class="social iconfont icon-list btn-mobile-menu__icon"></i>
         <i class="social iconfont icon-angleup btn-mobile-close__icon hidden"></i>
@@ -129,7 +129,7 @@
     <script type="text/javascript" src="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/js/main.js"></script>
     <script type="text/javascript" src="./assets/json/images.json?cb=getBingImages"></script>
     <!--<script id="lfz" src="https://player.liaofuzhan.com/player/player.js" key=1521319244015398913></script>-->
-    <!--<script id="music" src="https://music.xingyaox.com/player.js" key="6399cbe9e75044ebab7969d7819744fc"></script>-->
+    <script id="music" src="https://music.xingyaox.com/smusic/f656f1eeb0ae43038cf0680212a31d2c" m="1"></script>
     <!-- aplayer -->
     <script src="https://fastly.jsdelivr.net/npm/meting@1.2.0/dist/Meting.min.js"></script>
     <!--<script src="https://fastly.jsdelivr.net/gh/kaygb/kaygb@master/js/v3.js"></script> -->
