--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             const formData = new FormData();
             formData.append('file', file);
 
-            fetch('https://missuo.ru/upload', {
+            fetch('https://img.110.nl.eu.org/upload', {
                 method: 'POST',
                 body: formData
             })
