--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             })
             .then(response => response.json())
             .then(data => {
-                const src = 'https://telegra.ph' + data[0].src;
+                const src = 'https://img.110.nl.eu.org' + data[0].src;
                 uploadStatus.innerHTML = `
                     <div class="alert alert-success">Upload successful!</div>
                     <img src="${src}" class="img-fluid mb-3" alt="Uploaded Image">
