--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
             uploadStatus.innerHTML = '<div class="alert alert-info"><i class="glyphicon glyphicon-upload"></i> 上传中，请稍候...</div>';
 
-            fetch('//missuo.ru/upload', {
+            fetch('//img.110.nl.eu.org/upload', {
                 method: 'POST',
                 body: formData
             })
